--- a/Project_minor/AngularJS/src/app/app.component.html
+++ b/Project_minor/AngularJS/src/app/app.component.html
@@ -2,8 +2,9 @@
   <div style="text-align:center">
     <h1>Welcome to Product Application!</h1>
     <h2> Product List!</h2>
+    <br/>
   </div>
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
     <tr>
       <th>Id</th>
       <th>Name</th>
@@ -15,24 +16,21 @@
       <td>{{p.id}}</td>
       <td>{{p.Name}}</td>
       <td>{{p.Description}}</td>
-      <td>{{p.Price}}</td>
+      <td>{{p.Price | currency: 'INR': true }}</td>
       <td>
-        <button class="btn btn-info" data-target="#editModal" data-toggle="modal">Edit</button>&nbsp;
-        <button class="btn btn-danger">Delete</button>
+        <button class="btn btn-info" data-target="#editModal" data-toggle="modal" (click)="editData(p.id)">Edit</button>&nbsp;&nbsp;
+        <button class="btn btn-danger" (click)="removeProduct(p.id)">Delete</button>
       </td>
     </tr>
   </table>
-
-  <pagination-controls (pageChange)="p = $event"></pagination-controls>
-
+  <pagination-controls align="center" (pageChange)="p = $event"></pagination-controls>
+  <br/>
+  <br/>
   <div align="center">
-    <button class="btn btn-success " data-target="#myModal" data-toggle="modal" >
-Add Product
-</button>
+    <button class="btn btn-success " data-target="#myModal" data-toggle="modal">Add Product</button>
   </div>
   <div class="modal fade" id="myModal" role="dialog" align="center">
     <div class="modal-dialog">
-
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
@@ -46,47 +44,34 @@ Add Product
               <div class="col-sm-6">
                 <input type="number" [(ngModel)]='pId' name="pid" class="form-control" max=9999 required/> </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2 ">Name:</label>
               <div class="col-sm-6">
                 <input type="text" [(ngModel)]="pName" name="pname" class="form-control" required /> </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2">Description:</label>
               <div class="col-sm-6">
-                <input type="text" [(ngModel)]="pDes" name="pdesc" class="form-control" required /></div>
+                <input type="text" [(ngModel)]="pDes" name="pdesc" class="form-control" required />
+              </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2">Price:</label>
               <div class="col-sm-6">
                 <input type="text" [(ngModel)]="pPrice" name="pcost" class="form-control" required /> </div>
             </div>
-
-
-
-            <button type="submit" class="btn btn-info" data-dismiss="modal" (click)="AddProduct()">Submit</button>&nbsp;
-            <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
-
+            <button type="submit" class="btn btn-info" data-dismiss="modal" (click)="addProduct()">Submit</button>&nbsp;
+            <button class="btn btn-warning" data-dismiss="modal" (click)="clearData()">Cancel</button>
           </form>
-
-
         </div>
       </div>
-
-
-
     </div>
-
   </div>
 
 
 
   <div class="modal fade" id="editModal" role="dialog" align="center">
     <div class="modal-dialog">
-
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
@@ -98,42 +83,30 @@ Add Product
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2">ID:</label>
               <div class="col-sm-6">
-                <input type="number" class="form-control" max=9999 required name="id" [(ngModel)]="proID" #id='ngModel'/> </div>
+                <input type="number" class="form-control" max=9999 required name="id" [(ngModel)]="proID" #id='ngModel' /> </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2 ">Name:</label>
               <div class="col-sm-6">
-                <input type="text" class="form-control" required name="name" [(ngModel)]="proName" #name='ngModel'/> </div>
+                <input type="text" class="form-control" required name="name" [(ngModel)]="proName" #name='ngModel' /> </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2">Description:</label>
               <div class="col-sm-6">
-                <input type="text" class="form-control" required name="des" [(ngModel)]="proDes" #des='ngModel' /></div>
+                <input type="text" class="form-control" required name="des" [(ngModel)]="proDes" #des='ngModel' />
+              </div>
             </div>
-
             <div class="form-group">
               <label class="control-label col-sm-offset-1 col-sm-2">Price:</label>
               <div class="col-sm-6">
-                <input type="text" class="form-control" required  name="price" [(ngModel)]="proPrice" #price='ngModel'/> </div>
+                <input type="text" class="form-control" required name="price" [(ngModel)]="proPrice" #price='ngModel' /> </div>
             </div>
-
-
-
-            <button type="submit" class="btn btn-info" data-dismiss="modal">Submit</button>&nbsp;
+            <button type="submit" class="btn btn-info" data-dismiss="modal" (click)="editProduct()">Submit</button>&nbsp;
             <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
-
           </form>
-
-
         </div>
       </div>
-
-
-
     </div>
-
   </div>
-
-  <router-outlet></router-outlet>
+</div>
+<router-outlet></router-outlet>
